Sync all content

--- a/content/resources/11-957iap07.md
+++ b/content/resources/11-957iap07.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: New York's old city hall circa 1830, the seat of urban governance. (Image
   courtesy of the New York City Art Commission.)
-file: /media/courses/11-957-frameworks-of-urban-governance-january-iap-2007/ea9f6c1dabf56e133d6ec0f2eaf4ec30_11-957iap07.jpg
+file: /courses/11-957-frameworks-of-urban-governance-january-iap-2007/ea9f6c1dabf56e133d6ec0f2eaf4ec30_11-957iap07.jpg
 file_type: image/jpeg
 image_metadata:
   caption: New York's old city hall circa 1830, the seat of urban governance. (Image
@@ -15,3 +15,5 @@ resourcetype: Image
 title: New York City Hall
 uid: ea9f6c1d-abf5-6e13-3d6e-c0f2eaf4ec30
 ---
+New York's old city hall circa 1830, the seat of urban governance. (Image courtesy of the New York City Art Commission.)
+
