--- a/content/resources/11-957iap07-th.md
+++ b/content/resources/11-957iap07-th.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: New York's old city hall circa 1830, the seat of urban governance. (Image
   courtesy of the New York City Art Commission.)
-file: /media/courses/11-957-frameworks-of-urban-governance-january-iap-2007/7a78c4c20c341e4f26a1adab88a15ae9_11-957iap07-th.jpg
+file: /courses/11-957-frameworks-of-urban-governance-january-iap-2007/7a78c4c20c341e4f26a1adab88a15ae9_11-957iap07-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: New York's old city hall circa 1830, the seat of urban governance. (Image
@@ -15,3 +15,5 @@ resourcetype: Image
 title: New York City Hall (thumbnail)
 uid: 7a78c4c2-0c34-1e4f-26a1-adab88a15ae9
 ---
+New York's old city hall circa 1830, the seat of urban governance. (Image courtesy of the New York City Art Commission.)
+
