Sync all content

--- a/content/resources/11-957iap07-th.md
+++ b/content/resources/11-957iap07-th.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Old City Hall in New York City from around 1830.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: New York City Hall (thumbnail)
 uid: 7a78c4c2-0c34-1e4f-26a1-adab88a15ae9
 ---
 New York's old city hall circa 1830, the seat of urban governance. (Image courtesy of the New York City Art Commission.)
-
