--- a/content/resources/11-957iap07.md
+++ b/content/resources/11-957iap07.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Old City Hall in New York City from around 1830.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: New York City Hall
 uid: ea9f6c1d-abf5-6e13-3d6e-c0f2eaf4ec30
 ---
 New York's old city hall circa 1830, the seat of urban governance. (Image courtesy of the New York City Art Commission.)
-
